[metadata]
name = prestoplot
author = David Eyk
author-email = david.eyk@gmail.com
summary = Boom, instant plot!
license = MIT
description-file = README.rst
requires-python = >= 3.6
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python

[files]
packages =
    prestoplot


[entry_points]
console_scripts =
    presto = prestoplot.cli:main
