[metadata]
name = prestoplot
author = David Eyk
author-email = david@eykd.net
summary = Generative grammars for idea generation.
license = MIT
description-file = README.rst
requires-python = >= 3.6
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
home-page = https://github.com/eykd/prestoplot
project_urls =
    Bug Tracker = https://github.com/eykd/prestoplot/issues
    Source Code = https://github.com/eykd/prestoplot

[options]
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

[files]
packages =
    prestoplot


[options.entry_points]
console_scripts =
    presto = prestoplot.cli:main

[versioneer]
VCS = git
style = pep440
versionfile_source = src/prestoplot/_version.py
versionfile_build = prestoplot/_version.py
tag_prefix = 

[flake8]
exclude =
        .git,
        venv,
        dist,
        __pycache__,
max-line-length = 88
ignore =
       W503, # line break occurred before a binary operator
       E203, # whitespace before ':'

[tool:isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88
